--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>マイクラキング</title>
   <link rel="stylesheet" href="style.css">
+</head>
 <body>
   <header>
     <h1>マイクラキング</h1>
@@ -14,6 +15,7 @@
         <li><a href="#anime">好きなアニメ</a></li>
       </ul>
     </nav>
+    <img class="creeper" src="creeper.png">
   </header>
   <article>
     <section id="profile">
@@ -49,10 +51,11 @@
       <img src="anime.png">
     </section>
   </article>
+  
   <footer>
     <h4>MKing Company Ltd.</h4>
     <a href="mailto:info@micraking.com">info@micraking.com</a>
-    <p>&copy; MicraKing </p>
+    <p>&copy; MicraKing</p>
   </footer>  
 </body>
 </html>
